# mapi-scrubbed

./: CMakeLists.txt  olmapi32.def  olmapi32.dll.exp  olmapi32.dll.lib
importlib/: CMakeLists.txt  mapi32.dll.exp  mapi32.dll.lib  olmapi32.dll.exp  olmapi32.dll.lib
importlib/x64/: mapi32.lib  olmapi32.lib
importlib/x86/: mapi32.lib  olmapi32.lib
include/: MAPIConstants.h
scrubber/: CMakeLists.txt  ScrubHeaders.tt
